--- a/views/ng-templates/simple_readme.jade
+++ b/views/ng-templates/simple_readme.jade
@@ -17,7 +17,7 @@
 						form.padded-box(ng-submit='visualize()')
 							form-group
 								div.text-center.padded-box
-									select.selectpicker(ng-model="visualizeThese" ng-options="o.label for o in previous" multiple)
+									multiselect(ms-header="Select which routes to visualize" ng-model='visualizeThese', options='o.label for o in previous', data-multiple='true', scroll-after-rows='4')
 								div.text-center.padded-box
 									button#visButton.btn.btn-warning-btn-block.top-gap(type='submit') Visualize
 									button#flyButton.btn.btn-warning-btn-block.top-gap(ng-click='flythrough()') Fly Through
