ISSUE #33 - Fix some issues with external JS files

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -25,7 +25,7 @@ html(lang="en")
 		script(type="text/javascript" src='#{x3dcontroller}')
 		script(type="text/javascript" src='#{threedrepoapp}')
 		script(type="text/javascript" src='#{uibootstrap}')
-		script(type="text/javascript" src='#{chartjs}')
+		//script(type="text/javascript" src='#{chartjs}')
 		link(rel='stylesheet' type='text/css' href='#{fontawesomecss}')
 
 		script(src='/public/js/project.js')
