--- a/views/simple.jade
+++ b/views/simple.jade
@@ -43,7 +43,7 @@ html(lang="en")
 		script(type="text/javascript" src='#{x3dcontroller}')
 		script(type="text/javascript" src='#{threedrepoapp}')
 		script(type="text/javascript" src='#{uibootstrap}')
-		script(type="text/javascript" src='#{chartjs}')
+		//script(type="text/javascript" src='#{chartjs}')
 		link(rel='stylesheet' type='text/css' href='#{fontawesomecss}')
 
 		script(type="text/javascript" src="/public/js/external/angular-bootstrap-multiselect.js")
