--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -1,6 +1,11 @@
 #wrap
+	.treeview
+		#scenetree
+	div#meta-popup.draggable.ui-widget-content
+		div#metadata
 	x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace')
-		scene(onbackgroundclicked='bgroundClick(event);')
-			viewpoint#sceneVP
+		scene#mainScene(onbackgroundclicked='bgroundClick(event);')
+			viewpoint#sceneVP()
+			navigationInfo#nav 
 			inline(ng-init='x3domreload()', namespacename='model', onload='onLoadedEvent();', url="{{iFrameURL.url}}", render='true', load='true')
 
