--- a/views/waypoint.jade
+++ b/views/waypoint.jade
@@ -29,7 +29,7 @@ html(lang="en")
 		link(rel='stylesheet', href="#{jqueryuicss}")
 		script(type="text/javascript" src="#{jqueryuijs}")
 		link(rel='stylesheet', href='#{bootstrapcss}')
-		link(rel='stylesheet', href='/public/css/simple.css')
+		link(rel='stylesheet', href='/public/css/waypoint.css')
 		script(type="text/javascript" src="#{bootstrapjs}")
 		script(type="text/javascript" src="#{bootstrapdialog}")
 
@@ -43,7 +43,7 @@ html(lang="en")
 		script(type="text/javascript" src='#{x3dcontroller}')
 		script(type="text/javascript" src='#{threedrepoapp}')
 		script(type="text/javascript" src='#{uibootstrap}')
-		script(type="text/javascript" src='#{chartjs}')
+		//script(type="text/javascript" src='#{chartjs}')
 		link(rel='stylesheet' type='text/css' href='#{fontawesomecss}')
 
 		script(type="text/javascript" src="/public/js/external/angular-bootstrap-multiselect.js")
@@ -55,7 +55,7 @@ html(lang="en")
 		script(src='/public/js/controlinterface.js')
 		script(src='/public/js/waypoint.js')
 		script(src='/public/js/custom_keys.js')
-		script(src='/public/js/simple.js')
+		script(src='/public/js/waypoint_angular.js')
 
 		script.
 			$(function() {
