ISSUE #33 - Updated templates to use rename waypoint templates

--- a/views/ng-templates/waypoint_mainpage.jade
+++ b/views/ng-templates/waypoint_mainpage.jade
@@ -1,6 +1,6 @@
 x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace', keysEnabled='false', disableDoubleClick='true')
-	include simple_readme
-	include simple_vis_controls
+	include waypoint_readme
+	include waypoint_vis_controls
 	scene(onbackgroundclicked='bgroundClick(event);')
 		viewpoint#sceneVP
 		navigationInfo#nav
