ISSUE #33 - Polished up login issues

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -51,7 +51,7 @@ html(lang="en")
 
 		// Login template
 		script(type='text/ng-template', id='login.html')
-			include ng-templates/signin.jade
+			include ng-templates/old_login.jade
 
 		// Signup template
 		script(type='text/ng-template', id='signup.html')
