--- a/views/waypoint.jade
+++ b/views/waypoint.jade
@@ -70,7 +70,7 @@ html(lang="en")
 
 		// Login template
 		script(type='text/ng-template', id='login.html')
-			include ng-templates/waypoint_signin.jade
+			include ng-templates/old_login.jade
 
 		// Header
 		script(type='text/ng-template', id='mainpage.html')
