--- a/public/css/waypoint.css
+++ b/public/css/waypoint.css
@@ -9,7 +9,7 @@
 }
 
 .body-login { 
- background: url('/public/images/background.jpg') no-repeat center center fixed; 
+ background-color: rgb(0.0, 0.0, 1.0);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
@@ -46,4 +46,13 @@
 	z-index: 100;
 }
 
+.viewport{
+	background-color: #004594;
+}
+
+#credentials-box {
+    padding: 20% 0 0;	
+    width: 320px;
+    margin: auto;
+}
 
