--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -36,7 +36,7 @@ html(lang="en")
 
 		script(src='/public/js/project.js')
 		
-	body(ng-app='3drepo').ng-scope
+	body(ng-app='3drepo' ng-controller='LoginCtrl').ng-scope
 		// Not found template
 		script(type='text/ng-template', id='404.html')
 			include ng-templates/404.jade
@@ -101,8 +101,8 @@ html(lang="en")
 		script(type='text/ng-template', id='footer.html')
 			include ng-templates/footer.jade
 
-		ng-include(src="'header.html'")
+		ng-include(ng-show="loggedIn" src="'header.html'")
 		div(ui-view='')
-		#push
-		ng-include(src="'footer.html'")
+		ng-include(ng-show="loggedIn" src="'footer.html'")
+
 
