--- a/views/ng-templates/header.jade
+++ b/views/ng-templates/header.jade
@@ -1,4 +1,4 @@
-.header(ng-controller='LoginCtrl')
+.header
 	.container-fluid
 		.navbar-header
 			button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.bs-navbar-collapse')
