--- a/views/ng-templates/old_login.jade
+++ b/views/ng-templates/old_login.jade
@@ -5,6 +5,7 @@
 				img#logo(src='public/svg/3drepo_logo.svg')
 				h5.version.top-gap Version: #{version}
 				form.signin(ng-submit='login()')
+					{{LoginCtrl.test}}
 					input(type='text', ng-model='user.username', class='form-control top-gap', placeholder='Username', required, autofocus)
 					input(type='password', ng-model='user.password', class='form-control top-gap', placeholder='Password', required)
 					button(class='btn btn-warning btn-block top-gap', type='submit') Sign In
