--- a/views/ng-templates/footer.jade
+++ b/views/ng-templates/footer.jade
@@ -1,12 +1,10 @@
 #footer
 	.container-fluid
 		.row
-			.col-md-2 &copy; 2014 3D Repo LTD
-			.col-md-1 T&amp;Cs
-			.col-md-1 Security
-			.col-md-1
-			.col-md-2 LOGO
-			.col-md-2
-			.col-md-1 Contact
-			.col-md-1 Blog
-			.col-md-1 About
+			.col-xs-3 &copy; 2014 3D Repo LTD
+			.col-xs-1 T&amp;Cs
+			.col-xs-1 Security
+			.col-xs-2 LOGO
+			.col-xs-1 Contact
+			.col-xs-1 Blog
+			.col-xs-1 About
