--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -187,7 +187,7 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
 /******************************************************************************/
 
 .treeview {
-    top: 50px;
+    top: 60px;
     position: absolute;
     z-index: 1;
     overflow: auto;
@@ -453,6 +453,10 @@ a:hover {
 	min-width: 300px;
 }
 
+#loginButtons {
+	height: 34px;
+	margin-top: 13px;
+}
 
 /* general */
 
