--- a/views/ng-templates/header.jade
+++ b/views/ng-templates/header.jade
@@ -1,4 +1,4 @@
-.header
+.header(ng-controller='LoginCtrl')
 	.container-fluid
 		.navbar-header
 			button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.bs-navbar-collapse')
@@ -6,18 +6,18 @@
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand.logo-pad.header-logo(href='../')
+			a.navbar-brand.logo-pad.header-logo(ng-click="goDefault()")
 				img.v-expand(src='/public/images/logo.png')
 		nav.collapse.navbar-collapse.bs-navbar-collapse(role='navigation')
 			form.navbar-left.tight.v-expand(role='search')
 				.form-group.tight
 					input#search-box.form-control(type='text', ng-model="asyncSelected", placeholder="Search 3D Repo", typeahead="thing for thing in getThings($viewValue)", typeahead-loading="Searching")
-			a(href='http://blog.getbootstrap.com') Enterprise
+			//a(href='http://blog.getbootstrap.com') Enterprise
 			form.navbar-left.tight.v-expand(role='login')
-				.form-group.tight
-					button.v-expand.btn.btn-success.pull-left(ng-hide='!loggedIn', ng-click="logOut()") Log Out
+				.form-group.tight#loginButtons
+					button.v-expand.btn.btn-danger.pull-left(ng-hide='!loggedIn', ng-click="logOut()") Log Out
 					button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="loginPage()") Login
 					button.v-expand.btn.btn-success.pull-left(ng-hide='loggedIn', ng-click="signupPage()") Sign Up
-			span.clearfix
+			//span.clearfix
 				a(href='http://blog.getbootstrap.com')
 					img(src='/public/images/en.gif', height='16')
