ISSUE #33   - Complete re-write of error reporting 	    - Fix user settings and signup page

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1024,3 +1024,13 @@ img.loading{
 	background-color: lightgreen;
 }
 
+.formStyle {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #DDD;
+}
+
+.errorMessage {
+	color: lightcoral;
+}
+
