ISSUE #33 - Nearly completed splitting of Angular monostrosity

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -312,7 +312,7 @@ span.fancytree-title:hover {
 .viewport,
 #viewer{
 	width:100%;
-	height:100%;
+	height: 600px;
 	border:0px;
 	display: block;
 }
