--- a/views/ng-templates/common.jade
+++ b/views/ng-templates/common.jade
@@ -1,18 +1,18 @@
 .col-md-4.tight.gutter-right
 	// Project name and author
 	.project-title
-		h2 {{data.info.name}}
-		p Owner: {{data.info.owner}}
+		h2 {{Data.ProjectData.name}}
+		p Owner: {{Data.ProjectData.owner}}
 	// Branch selector
 	.row.tight
 		.btn-group.menu-button
 			button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
 				i.fa.fa-code-fork.menu-icon
 				span.button-title Branch: 
-				span.button-keyword {{data.current_branch.name}}
+				span.button-keyword {{Data.CurrentBranch.name}}
 				span.caret
 			ul.dropdown-menu(role='menu')
-				li(ng-repeat='branch in data.info.branches')
+				li(ng-repeat='branch in Data.Branches.branches')
 					a(href='#/', ng-click='setBranch(branch)')
 						span.button-keyword {{branch}}
 	// Revision selector
@@ -21,14 +21,14 @@
 			button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
 				i.fa.fa-tag.menu-icon
 				span.button-title Revision: 
-				span.button-keyword {{data.current_revision.shortName}}
+				span.button-keyword {{Data.CurrentRevision.shortName}}
 				span.caret
 			ul.dropdown-menu(role='menu')
-				li(ng-repeat='rev in data.revisions')
+				li(ng-repeat='rev in Data.CurrentBranch.revisions')
 					a(href='#/', ng-click='setRevision(rev)')
 						span.button-keyword {{rev.name}}
 	// Diff selector
-	.row.tight
+	//.row.tight
 		.btn-group.menu-button
 			button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
 				i.fa.fa-copy.menu-icon
