--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -8,4 +8,5 @@
 			viewpoint#sceneVP()
 			navigationInfo#nav 
 			inline#masterInline(namespacename="model", onload="onLoadedEvent();")
+	div(ui-view="footer")
 
